# ai-learning-python-notebooks

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
notebooks/: gradio-playground.ipynb  langgraph-intro.ipynb  mcp.ipynb  openai-agents-sdk.ipynb
