[project]
name = "ai-learning-python-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "openai-agents>=0.3.0",
    "pydantic>=2.11.9",
    "typing>=3.10.0.0",
]
